package main.core.models;

public interface Entity
{
    EntityId id();
}
