package main.domain.exceptions;

/**
 * Exception thrown when an event is sold out.
 */
public class SoldOut extends Exception {

    /**
     * Constructs a new SoldOut exception with no detail message.
     */
    public SoldOut() { super(); }
}
