package main.domain.models.users;

import main.roles.EntityId;

public class UserId 
extends EntityId { public UserId() { super(); } }
